k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildkite-overview
  labels:
    app: buildkite-overview
    component: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: buildkite-overview
    component: web
